Add directories for images and recipes
Also add two new recipes yippee!!

--- a/index.html
+++ b/index.html
@@ -8,5 +8,10 @@
 <body>
 	
 	<h1>Odin Recipes</h1>
+	<br>
+	<a href="recipes/new-improved-chicken-parmesan.html">New &amp; Improved Chicken Parmesan</a>	
+	<br>
+	<br>
+	<a href="recipes/paanasen-makkarapizza.html">Paanasen herkullinen makkarapitsa</a>	
 </body>
 </html>
